--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "miranime-api by letrix",
   "main": "./src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node ./src/index.js",
+    "dev": "nodemon ./src/index.js"
   },
   "author": "Letrix",
   "license": "ISC",
@@ -12,7 +13,10 @@
     "apollo-server-express": "^2.22.1",
     "axios": "^0.21.1",
     "bcryptjs": "^2.4.3",
+    "body-parser": "^1.19.0",
     "cheerio": "^1.0.0-rc.5",
+    "cloudflare-bypasser": "^0.0.3",
+    "cloudscraper": "^4.6.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
